--- a/processor.qsf
+++ b/processor.qsf
@@ -57,6 +57,10 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name QIP_FILE rom_1.qip
+set_global_assignment -name MIF_FILE rom_1.mif
 set_global_assignment -name SYSTEMVERILOG_FILE "Laboratorio 3/ALU/alu/zeroflag.sv"
 set_global_assignment -name SYSTEMVERILOG_FILE "Laboratorio 3/ALU/alu/testbench.sv"
 set_global_assignment -name SYSTEMVERILOG_FILE "Laboratorio 3/ALU/alu/neflag.sv"
@@ -95,10 +99,9 @@ set_global_assignment -name SYSTEMVERILOG_FILE condlogic.sv
 set_global_assignment -name SYSTEMVERILOG_FILE datapath.sv
 set_global_assignment -name SYSTEMVERILOG_FILE arm.sv
 set_global_assignment -name SYSTEMVERILOG_FILE controller.sv
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name MIF_FILE rom_1.mif
-set_global_assignment -name QIP_FILE rom_1.qip
 set_global_assignment -name MIF_FILE ram_1.mif
 set_global_assignment -name QIP_FILE ram_1.qip
+set_global_assignment -name MIF_FILE rom_2.mif
+set_global_assignment -name QIP_FILE rom_2.qip
+set_global_assignment -name SYSTEMVERILOG_FILE p_c.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
