--- a/processor.qsf
+++ b/processor.qsf
@@ -56,6 +56,7 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name SYSTEMVERILOG_FILE testbench_22.sv
 set_global_assignment -name QIP_FILE rom_1.qip
 set_global_assignment -name MIF_FILE rom_1.mif
 set_global_assignment -name SYSTEMVERILOG_FILE "Laboratorio 3/ALU/alu/zeroflag.sv"
@@ -102,6 +103,8 @@ set_global_assignment -name MIF_FILE rom_2.mif
 set_global_assignment -name QIP_FILE rom_2.qip
 set_global_assignment -name SYSTEMVERILOG_FILE p_c.sv
 set_global_assignment -name SYSTEMVERILOG_FILE top.sv
+set_global_assignment -name MIF_FILE rom_22.mif
+set_global_assignment -name QIP_FILE rom_22.qip
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
