--- a/processor.qsf
+++ b/processor.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY testbench_22
+set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 22.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:52:03  MAY 22, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.0 Lite Edition"
@@ -105,6 +105,12 @@ set_global_assignment -name SYSTEMVERILOG_FILE p_c.sv
 set_global_assignment -name SYSTEMVERILOG_FILE top.sv
 set_global_assignment -name MIF_FILE rom_22.mif
 set_global_assignment -name QIP_FILE rom_22.qip
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH testbench_22 -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME testbench_22 -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testbench_22
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testbench_22 -section_id testbench_22
+set_global_assignment -name EDA_TEST_BENCH_FILE testbench_22.sv -section_id testbench_22
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
